zno-macro-draft/tests/zno/ui/err/008-item-is-not-a-function.stderr
error: custom attribute panicked
 --> tests/zno/ui/err/008-item-is-not-a-function.rs:3:1
  |
3 | #[zno]
  | ^^^^^^^^
  |
  = help: message: An item
