zno-macro-draft/tests/zno/ui/err/008-item-is-not-a-function.rs
use zno::zno;

#[zno]
struct S;

fn main() {}
